--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,20 @@ font-style: italic;
 margin-left: 250px;
 color: white;
 }
+.tab{
+margin-left: 330px;
+font-family: fantasy;
+font-style: italic;
 
+}
+.desc{
+  margin-left: 220px;
+  font-family: fantasy;
+  font-style: italic;
+}
+
+
+}
 
 .header{
 background-color: #84875f;
@@ -13,27 +26,42 @@ width: 100px;
 position: relative;
 }
 
+.title{
+width: 200px;
+margin-left: 200px;
+
+}
+
 .recipes {
   font-family: fantasy;
   font-size: 60px;
   font-style: italic;
-  margin-left: 250px
+  margin-left: 300px
 }
 .main {
-margin-left: 400px;
+margin-left: 350px;
+
+}
+
+
+.second {
+margin-left: 100px;
+margin-top: 100px;
+margin-right: 100px;
+
 
 }
 
 .menu{
 background-color: #84875f;
 width: 1000px;
-position: relative;
+margin-left: 100px;
 }
 
 
 
 body {
 
-background-color: #020302;
+background-color: #c2bdb0;
 
 }
