Added desc paragraph below recipe img

--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ max-height: 30em;
 }
 .bring {
 margin-left: 5em;
+height: -10em;
 
 }
 .bring1 {
@@ -138,6 +139,7 @@ margin-left: 27em;
 margin-bottom: 1em;
 
 }
+
 
 .bralist {
 
